--- a/TP1/style.css
+++ b/TP1/style.css
@@ -1,5 +1,5 @@
 html {
-    background: linear-gradient(#ffccf5,#eacdff,#d5cfff,#d3dfff,#caf0ff);
+    background: linear-gradient(to right,#55CDFC ,#F7A8B8 ,#ffffff,#F7A8B8 ,#55CDFC );
     color: #ff339a;
     font-family:fantasy;
     min-height: 100%;
@@ -20,7 +20,7 @@ h1,h2,h3 {
     display: block;
     /*background-color:#ffa4d2;
     color: #ff339a;*/
-    background: linear-gradient(to right, #ff218c, #ffd800, #21b1ff);
+    background: linear-gradient(#fa0b0b,#ff9100,#f8e807,#127a2c, #0b47ec,#8121ff);
     color: black;
     padding: 10px;
     width: 250px;
@@ -31,14 +31,5 @@ h1,h2,h3 {
 
 a {
     margin: 15px;
-}
-
-a:link {
-    color: #f2d6d6;
-    text-decoration: none;
-}
-
-a:visited {
-    color: #f2d6d6;
     text-decoration: none;
 }
