--- a/TP1/equipas/style.css
+++ b/TP1/equipas/style.css
@@ -1,6 +1,6 @@
 html {
-    background: linear-gradient(#420690,#640c96,#9725a5,#d24bb1,#ff69b4);
-    color:#f47575;
+    background:  	#a3a3a3;
+    color: black;
     font-family:fantasy;
     min-height: 100%;
 }
@@ -18,11 +18,10 @@ h1,h2,h3 {
 .atleta {
     /*background-color: #ffccf5;
     color: #7e3a70;*/
-    background: linear-gradient(to right, #ff218c, #ffd800, #21b1ff);
-    color:black;
+    background: #800080;
+    color: white;
     padding: 10px;
     margin: 15px;
     width: 20%;
-    border-style: solid;
     border-radius: 15px;
 }
